--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@magic-sdk/admin": "^2.4.1",
     "cookie": "^0.6.0",
+    "firebase": "^10.14.0",
     "framer-motion": "^11.9.0",
     "jsonwebtoken": "^9.0.2",
     "magic-sdk": "^28.11.0",
@@ -22,7 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.16.10",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18",
     "eslint": "^8",
